# Test

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: cmake.yml  static.yml
app/: CMakeLists.txt  Utils.hpp  main.cpp
doc/: Doxyfile
test/: CMakeLists.txt  test_utils.cpp
